# RetroPanda

./: .gitignore  CMakeLists.txt  README.md  advertising.cc  advertising.h  animation.cc  animation.h  app.cc  app.h  app_cleanup.cc  app_event.cc  app_render.cc  background.h  burger.cc  burger.h  burger_creator.cc  burger_creator.h  burger_item.cc  burger_item.h  conveyor.cc  entity.h  game_over_title.cc  global.h  hide_effect.h  main.cc  music.cc  music.h  score.cc  surface.cc  surface.h  timer.cc  timer.h  title.cc  title.h
MyGame/: Advertising.cpp  Advertising.hpp  Animation.cpp  Animation.hpp  App.cpp  App.hpp  App_cleanup.cpp  App_event.cpp  App_init.cpp  App_loop.cpp  App_render.cpp  Appearance.cpp  Background.cpp  Background.hpp  Burger.cpp  Burger.hpp  BurgerConstants.h  BurgerCreator.cpp  BurgerCreator.hpp  BurgerItem.cpp  BurgerItem.hpp  BurgerOldVersion.cpp  BurgerOldVersion.hpp  BurgerRefactoring.cpp  BurgerRefactoring.h  BurgerRefactoring.hpp  CAnimation.cpp  CAnimation.hpp  CApp.cpp  CApp.hpp  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnRender.cpp  CBackground.cpp  CBackground.hpp  CBurger.cpp  CBurger.hpp  CConveyor.cpp  (+52 more)
MyGame.xcodeproj/: project.pbxproj
MyGame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: advertising.h  app.cc  app.h  app_init.cc  app_loop.cc  background.cc  background.h  burger_constants.h  burger_creator.cc  burger_creator.h  burger_item.cc  conveyor.h  entity.cc  game_over_title.h  global.cc  global.h  hero.cc  hero.h  location.h  main.cc  music.h  score.cc  score.h  surface.h
(+24 files in other folders)
